Fix issues with TravisCI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 matrix:
   exclude:
     - env: INCLUDE_FORTRAN=true
-    - os: osx
+      os: osx
 
 notifications:
   email: false
@@ -21,9 +21,11 @@ notifications:
 cache: pip
 
 before_install:
-  - sudo apt-get -qq update
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$INCLUDE_FORTRAN" == true ]]; then
-    sudo apt-get install -y -qq python-dev gfortran liblapack-dev libatlas-dev libblas-dev build-essential
+    sudo apt-get install -y -qq python-dev gfortran build-essential;
+    fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" && "$INCLUDE_FORTRAN" == true ]]; then
+    brew install gfortran;
     fi
 
 install:
