--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_install:
 install:
   - pip install -U pip
   - pip install numpy
-  - pip install . -v
+  - pip install -e . -v
   - cd dragonfly/utils/direct_fortran/
   - python -c "import direct"
 
