--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,13 @@ python:
   - "3.5"
   - "3.6"
 env:
-  #- DIRECT_STATE=-direct OPT_STATE=-optimal
+  - DIRECT_STATE=-direct OPT_STATE=-optimal
   - DIRECT_STATE=direct OPT_STATE=-optimal
 
 notifications:
   email: false
 
-#cache: pip
+cache: pip
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$DIRECT_STATE" == "direct" ]]; then
@@ -23,8 +23,6 @@ install:
   - pip install -U pip
   - pip install numpy
   - pip install -e . -v
-  - cd dragonfly/utils/direct_fortran/
-  - python -c "import direct"
 
 script: 
   - bash run_all_tests.sh sanity $DIRECT_STATE $OPT_STATE
