--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ cache: pip
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$DIRECT_STATE" == "direct" ]]; then
-    sudo apt-get install -y -qq python-dev gfortran liblapack-dev libatlas-dev libblas-dev build-essential ;
+    sudo apt-get install -y -qq python-dev gfortran build-essential ;
     fi
 
 install:
