--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,18 @@ env:
   - DIRECT_STATE=-direct OPT_STATE=-optimal
   - DIRECT_STATE=direct OPT_STATE=-optimal
 
+matrix:
+  include:
+    - os: osx
+      language: generic
+      env: PYTHON=2.7.12 DIRECT_STATE=direct OPT_STATE=-optimal
+#    - os: osx
+#      language: generic
+#      env: PYTHON=3.5.6
+#    - os: osx
+#      language: generic
+#      env: PYTHON=3.6.8
+
 notifications:
   email: false
 
@@ -17,6 +29,20 @@ cache: pip
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$DIRECT_STATE" == "direct" ]]; then
     sudo apt-get install -y -qq python-dev gfortran build-essential ;
+    fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    brew update
+    brew install openssl readline
+    brew outdated pyenv || brew upgrade pyenv
+    brew install pyenv-virtualenv
+    pyenv install $PYTHON
+    export PYENV_VERSION=$PYTHON
+    export PATH="/Users/travis/.pyenv/shims:${PATH}"
+    pyenv-virtualenv venv
+    source venv/bin/activate
+    python --version
+    if [[ "$DIRECT_STATE == "direct" ]]; then
+    brew install gfortran
     fi
 
 install:
