--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,6 @@ before_install:
     fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     brew update ;
-    brew install openssl readline ;
     brew outdated pyenv || brew upgrade pyenv ;
     brew install pyenv-virtualenv ;
     pyenv install $PYTHON ;
@@ -43,7 +42,7 @@ before_install:
     python --version ;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" && "$DIRECT_STATE" == "direct" ]]; then
-    brew install gfortran ;
+    brew install gcc ;
     fi
 
 install:
