--- a/.travis.yml
+++ b/.travis.yml
@@ -10,26 +10,34 @@ env:
   - DIRECT_STATE=direct OPT_STATE=-optimal
 
 
-# We have to be explicit with the OSX versions because Python is not supported by default
+# We have to be explicit with the OSX versions because Python is not supported by default.
+# The Python versions then have to be explicitly labelled with full version numbers because
+# that is what pyenv uses for the installs. The extra "python" label to fix the display in the UI.
 matrix:
   include:
     - os: osx
       language: generic
+      python: 2.7
       env: PYTHON=2.7.12 DIRECT_STATE=direct OPT_STATE=-optimal
     - os: osx
       language: generic
+      python: 2.7
       env: PYTHON=2.7.12 DIRECT_STATE=-direct OPT_STATE=-optimal
     - os: osx
       language: generic
+      python: 3.5
       env: PYTHON=3.5.6 DIRECT_STATE=direct OPT_STATE=-optimal
     - os: osx
       language: generic
+      python: 3.5
       env: PYTHON=3.5.6 DIRECT_STATE=-direct OPT_STATE=-optimal
     - os: osx
       language: generic
+      python: 3.6
       env: PYTHON=3.6.8 DIRECT_STATE=direct OPT_STATE=-optimal
     - os: osx
       language: generic
+      python: 3.6
       env: PYTHON=3.6.8 DIRECT_STATE=-direct OPT_STATE=-optimal
 
 notifications:
@@ -42,6 +50,7 @@ cache:
   pip: true
   directories:
     - $HOME/Library/Caches/Homebrew
+    - $HOME/.pyenv_cache
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" && "$DIRECT_STATE" == "direct" ]]; then
