--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+*.mat
+*.p
+*.swp
+*.pdf
+*.eps
+*.mat
+*.gif
+*.so
+*.txt
 *.pyc
 env/*
 build/*
@@ -8,3 +17,5 @@ log_dir_file
 results_direct_file
 direct-f2pywrappers.f
 directmodule.c
+clean_all*
+*set_up*
