--- a/.travis.yml
+++ b/.travis.yml
@@ -74,8 +74,9 @@ before_install:
 install:
   - pip install -U pip
   - pip install numpy
+  - pip install -r requirements-dev.txt
   - pip install -e . -v
 
 script: 
   - bash run_all_tests.sh sanity $DIRECT_STATE
-
+  - bash run_all_tests.sh
