--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ before_install:
 
 install:
   - pip install -U pip
-  - pip install numpy
+  - pip install numpy cython
   - pip install -r requirements-dev.txt
   - pip install -e . -v
 
