Updated documentation in main API.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,8 +9,8 @@ pages:
   - 'Installation': 'install.md'
   - 'Getting Started - Command Line': 'getting_started_cli.md'
   - 'Getting Started - Code': 'getting_started_py.md'
-- Manual:
-  - 'Documentation' : 'documentation.md'
+- Documentation:
+  - 'Main APIs' : 'doc_main_apis.md'
 - Miscellaneous:
   - 'FAQ': 'faq.md'
   - 'References': 'references.md'
