--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ python:
 env:
   - DIRECT_STATE=-direct OPT_STATE=-optimal
   - DIRECT_STATE=direct OPT_STATE=-optimal
-addons:
-  apt:
-    packages:
-    - build-essential
-    - gfortran
-    - python-dev
+# addons:
+#  apt:
+#    packages:
+#    - build-essential
+#    - gfortran
+#    - python-dev
 
 osx-setup-steps: &osx-setup-steps
   os: osx
@@ -64,6 +64,11 @@ cache:
   directories:
     - $HOME/Library/Caches/Homebrew
     - $HOME/.pyenv_cache
+
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$DIRECT_STATE" == "direct" ]]; then
+    sudo apt-get install -y -qq python-dev gfortran build-essential ;
+    fi
 
 install:
   - pip install -U pip
