pyenv-virtualenv venv --> pyenv virtualenv venv
As discussed at https://github.com/pyenv/pyenv-virtualenv/issues/213

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ osx-setup-steps: &osx-setup-steps
     - pyenv install $PYTHON
     - export PYENV_VERSION=$PYTHON
     - export PATH="/Users/travis/.pyenv/shims:${PATH}"
-    - pyenv-virtualenv venv
+    - pyenv virtualenv venv
     - source venv/bin/activate
     - python --version
 
