--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ osx-setup-steps: &osx-setup-steps
     - export PYENV_VERSION=$PYTHON
     - export PATH="/Users/travis/.pyenv/shims:${PATH}"
     - pyenv virtualenv venv
+    - ls
+    - ls venv
     - source venv/bin/activate
     - python --version
 
