Fix issue with Python2 pyenv not installing on OSX
The fixes are described here:
https://github.com/pyenv/pyenv/issues/993

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ osx-setup-steps: &osx-setup-steps
   before_install:
     - brew update
     - brew outdated pyenv || brew upgrade pyenv
+    - brew install readline openssl xz
     - if [[ "$DIRECT_STATE" == "direct" ]]; then
       brew install gcc ;
       fi
