Add another fix for OSX pyenv issues

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ osx-setup-steps: &osx-setup-steps
     - brew update
     - brew outdated pyenv || brew upgrade pyenv
     - brew install readline openssl xz
+    - alias pyenv='CFLAGS="-I$(brew --prefix openssl)/include" LDFLAGS="-L$(brew --prefix openssl)/lib" pyenv'
     - if [[ "$DIRECT_STATE" == "direct" ]]; then
       brew install gcc ;
       fi
