--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ osx-setup-steps: &osx-setup-steps
     - brew update
     - brew outdated pyenv || brew upgrade pyenv
     - brew install readline openssl xz
-    - export CFLAGS="-I$(brew --prefix openssl)/include" \
-    - export LDFLAGS="-L$(brew --prefix openssl)/lib" \
+    - export CFLAGS="-I$(brew --prefix openssl)/include"
+    - export LDFLAGS="-L$(brew --prefix openssl)/lib"
     - if [[ "$DIRECT_STATE" == "direct" ]]; then
       brew install gcc ;
       fi
