--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,10 @@ osx-setup-steps: &osx-setup-steps
     - brew update
     - brew outdated pyenv || brew upgrade pyenv
     - brew unlink pyenv
-    - brew install pyenv@1.2.9
+    - brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/922f1a6709446cb1c6cfb954651275bf4033eef8/Formula/pyenv.rb
       #- brew install readline openssl xz
       #- export CFLAGS="-I$(brew --prefix openssl)/include"
       #- export LDFLAGS="-L$(brew --prefix openssl)/lib"
-    - brew link pyenv@1.2.9
     - if [[ "$DIRECT_STATE" == "direct" ]]; then
       brew install gcc ;
       fi
