--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ before_install:
 
 install:
   - pip install -U pip
-  - pip install numpy cython
+  - pip install numpy==1.16.1 cython
   - pip install -r requirements-dev.txt
   - pip install -e . -v
 
