--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,7 @@ osx-setup-steps: &osx-setup-steps
     - brew unlink pyenv
     - brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/922f1a6709446cb1c6cfb954651275bf4033eef8/Formula/pyenv.rb
     - if [[ "$DIRECT_STATE" == "direct" ]]; then
-        if [[ brew ls --versions gcc ]]; then
-        brew upgrade gcc ;
-        else
-        brew install gcc ;
-        fi
+        brew ls --versions gcc && brew upgrade gcc || brew install gcc ;
       fi
     - brew install pyenv-virtualenv
     - eval "$(pyenv init -)"
